--- a/caffeine/build.gradle
+++ b/caffeine/build.gradle
@@ -17,8 +17,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.7.14'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.7'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.14'
 }
 
 test {
